user_type and add responsable or coordinator